--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vercel-gerdau-logística-|-sistema-de-formatação",
+  "name": "vercel-gerdau-logística-|-sistema-de-formatação-1.1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
